create a main class